--- a/app/assets/stylesheets/sums.scss
+++ b/app/assets/stylesheets/sums.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the sum controller here.
+// Place all the styles related to the sums controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
