--- a/B_02_Antonio_Milev/app/views/cinamas_films/show.html.erb
+++ b/B_02_Antonio_Milev/app/views/cinamas_films/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_cinamas_film_path(@cinamas_film) %> |
-<%= link_to 'Back', cinamas_films_path %>
+<%= link_to 'Back', films_path %>
