--- a/B_02_Antonio_Milev/app/views/cinamas_films/new.html.erb
+++ b/B_02_Antonio_Milev/app/views/cinamas_films/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Cinamas Film</h1>
+<h1>New Cinema-Film Connection</h1>
 
 <%= render 'form', cinamas_film: @cinamas_film %>
 
-<%= link_to 'Back', cinamas_films_path %>
+<%= link_to 'Back', films_path %>
